# voxel-engine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  main.cpp
core/platform/: window.cpp  window.h
gfx/vulkan/: context.cpp  context.h  validation.cpp  validation.h
src/: main.cpp
